# Robotic_final

./: Map_Info.md  Map_Setup_From_Scratch.md  README.md  Real_Robot_Mapping_Steps.md  yolo_person_active detect
catkin_ws/src/turtlebot3_delivery/: Map_Architecture.md  package.xml
catkin_ws/src/turtlebot3_delivery/config/: fsm_map_config.yaml  move_base_params.yaml
catkin_ws/src/turtlebot3_delivery/launch/: delivery_fsm.launch  mapping.launch  mapping_pc_only.launch
catkin_ws/src/turtlebot3_delivery/scripts/: fsm_map_fusion.py  keyboard_mapping.py  navigation_control.py  obstacle_detector.py
docker_noetic/: Dockerfile  README.md
final-project/: .gitignore  README.md  requirements.txt  地图信息.md
final-project/catkin_ws/src/turtlebot3_delivery/: CMakeLists.txt  Deployment_Steps.md  Obstacle_Avoidance_Algorithm.md  State_Transition_Diagram.md  package.xml  start_all.sh
final-project/catkin_ws/src/turtlebot3_delivery/config/: costmap_common_params.yaml  costmap_params.yaml  dwa_params.yaml  fsm_map_config.yaml  fsm_params.yaml  gmapping_params.yaml
final-project/catkin_ws/src/turtlebot3_delivery/launch/: delivery_fsm.launch  mapping_pc_only.launch  navigation.launch
final-project/catkin_ws/src/turtlebot3_delivery/msg/: RobotState.msg
final-project/catkin_ws/src/turtlebot3_delivery/scripts/: fsm_core.py  map_tools.py  mark_goal_points.py  task_manager.py
final-project/docker_noetic/: Dockerfile  README.md
final-project/maps/: restaurant_map.yaml
maps/: restaurant_map.pgm
